fix: adjust seed to populate elasticsearch

--- a/docker/dev/logstash/pipeline/logstash.conf
+++ b/docker/dev/logstash/pipeline/logstash.conf
@@ -5,7 +5,8 @@ input {
     jdbc_connection_string => "jdbc:postgresql://postgres:5432/smart_search"
     jdbc_user => "postgres"
     jdbc_password => "postgresPass"
-    statement => "SELECT * FROM products;"
+    jdbc_validation_timeout => 999999
+    statement => "SELECT * FROM products"
     schedule => "* * * * *"  # Para rodar a cada minuto, altere conforme necessário
   }
 }
@@ -17,10 +18,11 @@ filter {
 output {
   elasticsearch {
     hosts => ["http://elasticsearch:9200"]
-    index => "postgres-data"
+    index => "postgres-data"  # Mantém um índice comum
     user => "elastic"
     password => "password"
-    document_id => "%{id}"  # Use a chave primária ou um identificador único
+    document_id => "%{[id]}"  # Use a chave primária ou um identificador único
+    action => "create"
   }
   stdout { codec => rubydebug }
 }
